# robot_cal_tools

./: .cmake-format  .github_clang_format.yml  .github_cmake_format.yml  .run-clang-format  LICENSE  README.md  cal_primer.md  dependencies.repos
rct_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
rct_common/cmake/: rct_common-config.cmake.in  rct_macros.cmake
rct_common/include/rct_common/: extrinsic_data_set.h  print_utils.h
rct_examples/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rct_examples/config/: avt_gige_camera_intr_nominal.yaml  avt_gige_intr_updated.yaml  charuco_camera_guesses.yaml  charuco_target_7x5.yaml  railcal.yaml  static_camera_guesses.yaml  target_10x10.yaml  target_5x5.yaml  target_7x7.yaml
rct_examples/config/noise_qualification/: data.yaml
rct_examples/data/: positioner_kinematic_measurements.yaml
rct_examples/data/test_set_10x10/: cal_data.yaml  camera_intr.yaml  camera_intr_calibrated.yaml  pose_guesses.yaml
rct_examples/data/test_set_charuco/: cal_data.yaml  target.yaml
rct_examples/include/rct_examples/: data_set.h  parameter_loaders.h
rct_examples/launch/: camera_intrinsic_calibration_example.launch  camera_intrinsic_calibration_validation.launch  camera_on_wrist_example.launch  charuco_calib_test_example.launch  experimental_intrinsic_example.launch  experimental_solve_pnp_example.launch  kinematic_calibration_example.launch  multi_static_camera_example.launch  multi_static_camera_multi_step_example.launch  multi_static_camera_only_example.launch  noise_qualification_2d.launch  pnp_example.launch  rail_intrinsic.launch  solve_multi_static_camera_pnp_example.launch  static_camera_charuco_example.launch  static_camera_example.launch
rct_examples/src/: camera_on_wrist_extrinsic.cpp  command_line_cal.cpp  intrinsic_calibration.cpp  multi_static_camera_extrinsic.cpp  noise_qualifier_test.cpp  solve_pnp.cpp  static_camera_extrinsic.cpp
rct_examples/src/examples/: camera_on_wrist.cpp  kinematic_calibration.cpp
rct_examples/src/rct_examples/: data_set.cpp
rct_examples/src/tools/: camera_intrinsic_calibration_validation.cpp  camera_on_wrist_extrinsic.cpp  hand_eye_calibration_analysis.h  intrinsic_calibration.cpp  kinematic_calibration.cpp  multi_static_camera_extrinsic.cpp  multi_static_camera_multi_step_extrinsic.cpp  multi_static_camera_only_extrinsic.cpp  noise_qualification_2d.cpp  rail_intrinsic.cpp  solve_multi_camera_pnp.cpp  solve_pnp.cpp  static_camera_extrinsic.cpp  static_camera_extrinsic_charuco.cpp
rct_examples/src/utilities/: data_set.cpp  parameter_loaders.cpp
rct_examples/src/validation/: noise_qualify_2d.cpp
rct_examples/src/verification/: noise_qualify_2d.cpp  noise_qualify_3d.cpp
rct_examples/test/: cam_on_wrist.test  camera_on_wrist_extrinsic_test.cpp
rct_image_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rct_image_tools/cmake/: rct_image_tools-config.cmake.in
rct_image_tools/include/rct_image_tools/: aruco_finder.h  aruco_grid_target.h  charuco_finder.h  charuco_grid_target.h  circle_detector.h  image_observation_finder.h  image_utils.h  modified_circle_grid_finder.h  modified_circle_grid_target.h  noise_qualifier.h  proclivity_check.h  target.h  target_features.h  target_finder.h
rct_image_tools/script/: calibration_target.py
rct_image_tools/src/: charuco_test.cpp  noise_qualifier_test.cpp  observation_finder_tests.cpp  solve_pnp.cpp  target_finder_tests.cpp
rct_image_tools/src/rct_image_tools/: aruco_finder.cpp  aruco_grid_target.cpp  charuco_finder.cpp  charuco_grid_target.cpp  circle_detector.cpp  circle_detector.h  image_observation_finder.cpp  modified_circle_grid_finder.cpp  modified_circle_grid_target.cpp  noise_qualifier.cpp  proclivity_check.cpp
rct_image_tools/test/: CMakeLists.txt  charuco_test.cpp  target_finder_utest.cpp
rct_optimizations/: CHANGELOG.rst  CMakeLists.txt  package.xml
rct_optimizations/cmake/: rct_optimizations-config.cmake.in
rct_optimizations/include/rct_optimizations/: ceres_math_utilities.h  circle_fit.h  covariance_analysis.h  covariance_types.h  dh_chain.h  dh_chain_kinematic_calibration.h  eigen_conversions.h  extrinsic_3d_camera_on_wrist.h  extrinsic_camera_on_wrist.h  extrinsic_hand_eye.h  extrinsic_multi_static_camera.h  extrinsic_multi_static_camera_only.h  extrinsic_multi_static_camera_wrist_only.h  extrinsic_static_3d_camera_robot_calibration.h  extrinsic_static_camera.h  local_parameterization.h  maximum_likelihood.h  multi_static_camera_pnp.h  noise_qualifier.h  pnp.h  types.h
rct_optimizations/src/: rct_optimizations_test.cpp
rct_optimizations/src/rct_optimizations/: camera_intrinsic.cpp  circle_fit.cpp  covariance_analysis.cpp  dh_chain.cpp  dh_chain_kinematic_calibration.cpp  eigen_conversions.cpp  extrinsic_3d_camera_on_wrist.cpp  extrinsic_camera_on_wrist.cpp  extrinsic_hand_eye.cpp  extrinsic_multi_static_camera.cpp  extrinsic_multi_static_camera_only.cpp  extrinsic_static_camera.cpp  (+7 more)
rct_optimizations/test/: CMakeLists.txt  camera_intrinsic_calibration_validation_utest.cpp  ceres_math_utilities_utest.cpp  conversion_utest.cpp  covariance_utest.cpp  dh_chain_kinematic_calibration_utest.cpp  dh_chain_kinematic_measurement_utest.cpp  dh_parameter_utest.cpp  extrinsic_camera_on_wrist_utest.cpp  extrinsic_hand_eye_dh_chain_utest.cpp  extrinsic_hand_eye_utest.cpp  extrinsic_multi_static_camera_utest.cpp  extrinsic_static_3d_camera_robot_calibration_utest.cpp  homography_utest.cpp  local_parameterization_utest.cpp  maximum_likelihood_utest.cpp  noise_qualification_utest.cpp  pnp_utest.cpp  serialization_utest.cpp
rct_ros_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
rct_ros_tools/launch/: command_line_data_collection.launch
rct_ros_tools/src/: command_line_cal.cpp  data_set.cpp  loader_utils.cpp  parameter_loaders.cpp  target_loader_plugins.cpp
rct_ros_tools/test/: modified_circle_grid_target.yaml  target_finder_plugin.test  target_finder_plugin_utest.cpp  target_loader.test  target_loader_utest.cpp
robot_cal_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+63 files in other folders)
