<?xml version="1.0"?>
<package format="2">
  <name>rct_common</name>
  <version>0.1.0</version>
  <description>The rct_common package. Contains macros and external libraries for the robot_cal_tools project.</description>
  <maintainer email="joseph.schornak@swri.org">Joseph Schornak</maintainer>
  <author email="joseph.schornak@swri.org">Joseph Schornak</author>
  <license>Apache 2.0</license>
  <depend>eigen</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
