<?xml version="1.0"?>
<package format="2">
  <name>rct_examples</name>
  <version>0.1.0</version>
  <description>The rct_examples package</description>

  <maintainer email="jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <author email="jmeyer1292@gmail.com">Jonathan Meyer</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rct_image_tools</depend>
  <depend>rct_optimizations</depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>

  <depend>roscpp</depend>

</package>
