<?xml version="1.0"?>
<package format="2">
  <name>rct_image_tools</name>
  <version>0.1.0</version>
  <description>The rct_image_tools package</description>

  <maintainer email="jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rct_optimizations</depend>
  <depend>cv_bridge</depend>

</package>
