<?xml version="1.0"?>
<package format="2">
  <name>rct_image_tools</name>
  <version>0.2.0</version>
  <description>The rct_image_tools package</description>

  <maintainer email="jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <depend>boost</depend>
  <depend>rct_common</depend>
  <depend>rct_optimizations</depend>
  <depend>yaml-cpp</depend>
  <depend>libopencv-dev</depend>
  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
